// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date max length constraint: Must be at or before 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be at or before 2024-01-01",
    },
    "level": "error",
    "message": "Must be at or before 2024-01-01",
    "path": Array [],
  },
]
`;

exports[`date max length constraint: max length: valid 1`] = `Array []`;

exports[`date max length constraint: max length: valid 2`] = `Array []`;

exports[`date min length constraint: Must be at or after 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be at or after 2024-01-01",
    },
    "level": "error",
    "message": "Must be at or after 2024-01-01",
    "path": Array [],
  },
]
`;

exports[`date min length constraint: min length: valid 1`] = `Array []`;

exports[`date min length constraint: min length: valid 2`] = `Array []`;

exports[`date with custom format max length constraint: Must be at or before 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be at or before 01-01-2024",
    },
    "level": "error",
    "message": "Must be at or before 01-01-2024",
    "path": Array [],
  },
]
`;

exports[`date with custom format max length constraint: max length: valid 1`] = `Array []`;

exports[`date with custom format max length constraint: max length: valid 2`] = `Array []`;

exports[`date with custom format min length constraint: Must be at or after 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be at or after 01-01-2024",
    },
    "level": "error",
    "message": "Must be at or after 01-01-2024",
    "path": Array [],
  },
]
`;

exports[`date with custom format min length constraint: min length: valid 1`] = `Array []`;

exports[`date with custom format min length constraint: min length: valid 2`] = `Array []`;
